--- a/index.css
+++ b/index.css
@@ -1,11 +1,12 @@
 @import url(logo.css);
 @import url(designs.css);
+@import url(header.css);
 *{
     margin: 0;
     padding: 0;
     font-family: Muli, sans-serif;
+    user-select: none;
 }
-
 .mainframe{
     background-color: rgb(10,25,47);
     height: 100vh;
@@ -17,7 +18,8 @@
 .content{
     color: rgb(67,170,155);
     font-weight: 900;
-    margin-top: 250px;
+    margin-top: 200px;
+    margin-right: 100px;
 }
 
 .greetings{
@@ -28,10 +30,24 @@
     font-size: 5rem;
     color: white;
 }
-
-nav{
-    display: flex;
-    width: 50vw;
-    justify-content: space-evenly;
-    color: white;
+.description{
+    margin-top: 20px;
+    font-weight: 700;
+    font-size: 1.4rem;
 }
+.getintouch{
+    padding: 10px;
+    font-size: 1.5rem;
+    margin-top: 20px;
+    border-radius: 10px;
+    color: white;
+    background-color: rgb(67,170,155);
+    width: fit-content;
+    text-shadow: 0px 0px 2px black;
+    transition-duration: 1s;
+}
+
+.getintouch:hover{
+    padding-right: 30px;
+}
+
