--- a/designs.css
+++ b/designs.css
@@ -21,7 +21,7 @@
 .circle{
     width: 98px;
     height: 98px;
-    border: 2px solid white ;
+    border: 2px solid rgb(230, 213, 213) ;
     border-radius: 50%;
     position: absolute;
     animation: badachota 3s linear infinite;
