--- a/header.css
+++ b/header.css
@@ -9,13 +9,16 @@
     left: 525px;
     top: 5px;
 }
-svg{
+.bulb,svg{
     height: 40px;
     width: 40px;
     fill: white;
 }
 
-svg:hover{
+.theam{
+    transform: scale(1.5);
+}
+svg:hover,.gmail:hover{
     transform: scale(1.2);
 }
 
@@ -24,8 +27,14 @@ svg:hover{
     background-color: black;
     border-radius: 5px;
 }
-.insta:hover path{
-    fill: linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%); 
-    border-radius: 5px;
+
+.github{
+    background-color: black;
+    border-radius: 100%;
+    height: 40px;
+}
+
+.github:hover{
+    height: 45px;
 }
 
