--- a/index.css
+++ b/index.css
@@ -7,8 +7,12 @@
     font-family: Muli, sans-serif;
     user-select: none;
 }
-.mainframe{
+body{
     background-color: rgb(10,25,47);
+    background-size: cover;
+}
+
+.mainframe{
     height: 100vh;
     display: flex;
     flex-direction: column;
@@ -30,24 +34,37 @@
     font-size: 5rem;
     color: white;
 }
+
 .description{
     margin-top: 20px;
     font-weight: 700;
     font-size: 1.4rem;
 }
-.getintouch{
+
+.buttons{
+    width:400px;
+    display: flex;
+    justify-content: space-between;
+}
+.projects{
+    position: fixed;
+    left: 450px;
+}
+.getintouch,.projects{
+    gap: 50px;
     padding: 10px;
     font-size: 1.5rem;
     margin-top: 20px;
     border-radius: 10px;
     color: white;
-    background-color: rgb(67,170,155);
-    width: fit-content;
-    text-shadow: 0px 0px 2px black;
+    border: 2px solid rgb(27, 185, 161);
+    background-color: transparent;
+    /* width: fit-content; */
     transition-duration: 1s;
+    cursor: pointer;
 }
-
-.getintouch:hover{
+.getintouch:hover,.projects:hover{
     padding-right: 30px;
 }
 
+/* ------------------------------VIDEO BACKGROUND-------------------------- */
